--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,14 +1,12 @@
 {
   "name": "routefrontendtask",
   "version": "1.0.0",
-  "main": "server.js",
-  "engines": {
-    "node": "20.x"
-  },
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js",
+    "vercel-build": "echo hello"
   },
   "keywords": [],
   "author": "",
