--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
     "vercel-build": "echo hello"
   },
   "keywords": [],
@@ -14,6 +13,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "vercel": "^35.0.3"
   }
 }
